// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map 1`] = `
[
  [
    "k",
  ],
  [
    "a",
  ],
  [
    "k",
  ],
  [
    "k",
  ],
]
`;

exports[`map only once 1`] = `
[
  [
    "k",
  ],
]
`;

exports[`reduce:throw 1`] = `"Invalid regular expression: /^https?:\\/\\/(?<domain>[^/?#]+)/: Invalid named capture referenced 'do'"`;
